# utils-project-template

./: .envrc  .gitignore  README.md  credentials_template.sh  pyproject.toml
Experiments/: README.md
Experiments/TestExperiment/: 00-first_notebook.ipynb  exputils.py
Libs/: README.md
Libs/projectutils/: README.md  pyproject.toml
Libs/projectutils/projectutils/data/: columntypes.py  s24io.py
Libs/projectutils/projectutils/notebooks/: __init__.py  experimentpaths.py  paths.py
