[tool.poetry]
name = "utils-experimentrepotemplate"
version = "0.1.0"
description = ""
authors = ["albton <alberto.tonon@scout24.ch>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^3.4.8"
jupyterlab-code-formatter = "^1.5.3"
black = "^22.8.0"
isort = "^5.10.1"
projectutils = {path = "Libs/projectutils", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
