[tool.poetry]
name = "projectutils"
version = "0.1.0"
description = "Utilities for this project."
authors = ["albton <alberto.tonon@scout24.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"
pandas = "^1.5.0"
Jinja2 = "^3.1.2"
numpy = "^1.23.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
